--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atomic-pack",
+  "name": "atomic-package",
   "version": "0.0.1",
   "description": "APB CSS (Atomic Parts Base CSS) + JavaScript framework.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/webcyou/AtomicPack.git"
+    "url": "git+https://github.com/webcyou/atomic-package.git"
   },
   "keywords": [
     "APB",
@@ -22,9 +22,9 @@
   "author": "daisuke.takayama",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/webcyou/AtomicPack/issues"
+    "url": "https://github.com/webcyou/atomic-package/issues"
   },
-  "homepage": "https://github.com/webcyou/AtomicPack#readme",
+  "homepage": "https://github.com/webcyou/atomic-package#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.1",
