--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ Thumbs.db
 *.iml
 *.idea
 
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.log
+
 # Folders to ignore
 bower_components
 node_modules
+.sass-cache
+
+# docs file
+docs/themes
