--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/webcyou/atomic-package#readme",
   "devDependencies": {
+    "del": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.1",
-    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
@@ -37,13 +37,14 @@
     "gulp-inject": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-run-sequence": "^0.3.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.0.2",
     "gulp-tsc": "^1.1.4",
     "gulp-tsd": "0.0.4",
     "gulp-tslint": "^4.3.0",
     "gulp-typescript": "^2.10.0",
     "gulp-watch": "^4.3.5",
-    "del": "^2.0.1",
     "main-bower-files": "^2.9.0",
     "run-sequence": "^1.1.2",
     "tslint": "^3.2.1",
