--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-express": "^0.3.5",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.3.1",
@@ -43,6 +45,7 @@
     "gulp-tsd": "0.0.4",
     "gulp-tslint": "^4.3.0",
     "gulp-typescript": "^2.10.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "run-sequence": "^1.1.2",
     "tslint": "^3.2.1",
