--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "APB CSS (Atomic Parts Base CSS) + JavaScript framework.",
   "main": "index.js",
   "scripts": {
-    "boot": "docs/boot.sh & gulp",
+    "boot": "concurrent \"npm run boot:hugo\" \"npm run boot:gulp\"",
+    "boot:hugo": "docs/boot.sh",
+    "boot:gulp": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -51,5 +53,8 @@
     "tslint": "^3.2.1",
     "typescript": "^1.7.5",
     "typings": "^1.3.2"
+  },
+  "dependencies": {
+    "concurrently": "^2.2.0"
   }
 }
