--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   },
   "homepage": "https://github.com/webcyou/atomic-package#readme",
   "devDependencies": {
+    "browserify": "^13.1.1",
     "del": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
-    "gulp-connect": "^4.0.0",
+    "gulp-connect": "^5.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-express": "^0.3.5",
     "gulp-plumber": "^1.1.0",
@@ -45,14 +46,19 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-tsc": "^1.1.4",
     "gulp-tsd": "0.1.1",
-    "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-tslint": "^6.1.2",
+    "gulp-typescript": "^3.1.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.5",
+    "karma-browserify": "^5.1.0",
+    "mocha": "^3.1.2",
+    "power-assert": "^1.4.1",
     "run-sequence": "^1.1.2",
+    "tsify": "^2.0.2",
     "tslint": "^3.2.1",
-    "typescript": "^1.7.5",
-    "typings": "^1.3.2"
+    "typescript": "^2.0.6",
+    "typings": "^1.3.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "concurrently": "^2.2.0"
