add karma files

--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "gulp-typescript": "^3.1.2",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.5",
+    "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.2.0",
     "mocha": "^3.1.2",
     "power-assert": "^1.4.1",
     "run-sequence": "^1.1.2",
+    "sinon": "^1.17.6",
     "tsify": "^2.0.2",
     "tslint": "^3.2.1",
     "typescript": "^2.0.6",
