--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "boot": "concurrent \"npm run boot:hugo\" \"npm run boot:gulp\"",
     "boot:hugo": "docs/boot.sh",
     "boot:gulp": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers ts:espower-typescript-babel/guess test/**/*.ts",
+    "test:karma": "karma start"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "browserify": "^13.1.1",
     "del": "^2.0.1",
     "espower-typescript": "^6.0.1",
+    "espower-typescript-babel": "^0.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
@@ -55,6 +57,7 @@
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.2.0",
+    "karma-typescript-preprocessor": "^0.3.0",
     "mocha": "^3.1.2",
     "power-assert": "^1.4.1",
     "run-sequence": "^1.1.2",
