--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,3 +1,3 @@
 baseurl = "http://replace-this-with-your-hugo-site.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Atomic-Package"
