--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-mocha-reporter": "^2.2.0",
     "karma-typescript-preprocessor": "^0.3.0",
     "mocha": "^3.1.2",
+    "node-sass": "^4.4.0",
     "power-assert": "^1.4.1",
     "run-sequence": "^1.1.2",
     "sinon": "^1.17.6",
