--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@atomic-package/core",
-  "version": "0.4.0",
+  "name": "@atomic-package/atomic-package",
+  "version": "0.0.1",
   "description": "APB CSS (Atomic Parts Base CSS) + JavaScript framework.",
   "main": "index.js",
   "scripts": {
