--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,4 +1,4 @@
-BaseURL = "http://atomic-package.com/"
+BaseURL = "//atomic-package.com/"
 Title = "Atomic-Package"
 languageCode = "ja"
 date = "2012-04-06"
